2007-03-02 [iwkse]	0.2.0cvs11

	* src/poppler_viewer.c
		Add a spinner and remove
		the entry for page change.
		renamed some function.
		thanks to ticho for the hint;)

2007-03-02 [wwp]	0.2.0cvs10

	* src/poppler_viewer.c
		Set busy cursor when loading PS/PDF document.

2007-03-02 [iwkse]	0.2.0cvs9

	* src/poppler_viewer.c
		removed noticeview include header
		which isn't more used.

2007-03-02 [iwkse]	0.2.0cvs8

	* AUTHORS
		fix email address

2007-03-01 [wwp]	0.2.0cvs7

	* src/poppler_viewer.c
		Make a variable static, add a missing newline to g_warning,
		make labels padding using gtk_misc_set_padding() instead of
		with a white space (even better for translation).

2007-03-01 [colin]	0.2.0cvs6

	* src/poppler_viewer.c
		Fix invalid g_free()s - Sorry 
		for the bad advice :)
		Mark poppler_get_document_info_mode()
		and poppler_get_document_info_layout()
		const to avoid reintroducing this one

2007-03-01 [iwkse]	0.2.0cvs5

	* src/poppler_viewer.c
		rotate and info added.
		updated my new mail;)

2007-02-27 [colin]	0.2.0cvs4

	* src/Makefile.am
	* src/doc_info.xpm
		Add doc_info icon

2007-02-27 [colin]	0.2.0cvs3

	* src/Makefile.am
	* src/rotate_left.xpm
	* src/rotate_right.xpm
		Add rotate icons

2007-02-27 [paul]	0.2.0cvs2

	* src/poppler_viewer.c
		revert the revert of Salvatore's address

2007-02-27 [paul]	0.2.0cvs1

	* po/fr.po
	* po/it.po
	* src/Makefile.am
	* src/poppler_viewer.c
		merge the changes from the post_2_8 branch,
		adds zooming

2007-02-26 [paul]	0.2

	0.2 released (initial release)

2007-02-26 [colin]	0.1.0cvs17

	* po/ca.po
		Remove fuzzy

2007-02-26 [colin]	0.1.0cvs16

	* po/ca.po
		Fix msgfmt error

2007-02-26 [paul]	0.1.0cvs15

	* AUTHORS
	* src/poppler_viewer.c
		update Salvatore's email address
	* configure.ac
	* po/ca.po
	* po/de.po
	* po/fi.po
	* po/hu.po
	* po/pl.po
	* po/pt_BR.po
	* po/sk.po
		added by Miquel Oliete, Stephan Sachse, Flammie
		Pirinen, Pader Rezso, Pawel Pekala, Frederico
		Goncalves Guimaraes, and Andrej Kacian
